--- a/themes/sergiocarracedo/source/css/_content.scss
+++ b/themes/sergiocarracedo/source/css/_content.scss
@@ -49,12 +49,12 @@
     padding-left: 20px;
 
     li {
-      margin: 5px 0;
+      margin: 0 0 15px 0;
     }
   }
   ul {
     li {
-      margin: 5px 0;
+      list-style: circle;
     }
   }
   ol {
