--- a/themes/sergiocarracedo/source/css/_posts.scss
+++ b/themes/sergiocarracedo/source/css/_posts.scss
@@ -83,5 +83,45 @@
       position: relative;
       @include underline-effect($flat-color);
     }
+
+
+    .left-33,
+    .left-50 {
+      float: left;
+      margin: 0 15px 15px 0;
+    }
+
+    .right-33,
+    .right-50 {
+      float: right;
+      margin: 0 0 15px 15px;
+    }
+
+    .right-50,
+    .left-50 {
+      width: 50%;
+    }
+
+    .right-33,
+    .left-33 {
+      width: 33%;
+    }
+
+    .right-50,
+    .right-33,
+    .left-33,
+    .left-50 {
+      @include media($xs) {
+        float: none;
+        width: 100%;
+        margin: 0 0 15px 0;
+      }
+    }
+
+
+    .video-container {
+      margin-bottom: 30px;
+    }
+
   }
 }
