--- a/themes/sergiocarracedo/layout/_partial/head.ejs
+++ b/themes/sergiocarracedo/layout/_partial/head.ejs
@@ -34,5 +34,9 @@ var description = '';
     <% if (theme.rss){ %><link rel="alternative" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml"> <% } %>
     <% if (theme.favicon){ %><link rel="icon" href="<%- url_for(theme.favicon) %>"> <% } %>
     <%- css(['css/sergiocarracedo'])%>
-    <%- open_graph({image: page.cover}) %>
+    <%- open_graph({
+      image: page.cover,
+      title: page.title,
+      description: page.description,
+      }) %>
 </head>
