Bugfix: head cached title

--- a/themes/sergiocarracedo/layout/_partial/head.ejs
+++ b/themes/sergiocarracedo/layout/_partial/head.ejs
@@ -39,4 +39,6 @@ var description = '';
       title: page.title,
       description: page.description,
       }) %>
+
+      <%= page.title %>
 </head>
