--- a/themes/sergiocarracedo/layout/layout.ejs
+++ b/themes/sergiocarracedo/layout/layout.ejs
@@ -1,4 +1,4 @@
-<%- partial('_partial/head', null, {cache: true}) %>
+<%- partial('_partial/head', null, {cache: false}) %>
 <body>
     <%- body %>
 </body>
