--- a/themes/sergiocarracedo/layout/_partial/head.ejs
+++ b/themes/sergiocarracedo/layout/_partial/head.ejs
@@ -40,5 +40,49 @@ var description = '';
       description: page.description,
       }) %>
 
-      <%= page.title %>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+
+    <script>
+      function runGA() {
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        ga('create', 'UA-133459072-1', 'auto');
+        ga('send', 'pageview');
+      }
+    </script>
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+    <script>
+      window.addEventListener("load", function(){
+        window.cookieconsent.initialise({
+          "palette": {
+            "popup": {
+              "background": "#004262",
+              "text": "#fff"
+            },
+            "button": {
+              "background": "#8ec760",
+              "text": "#ffffff"
+            }
+          },
+          "type": "opt-out",
+          "content": {
+            "message": "Este sitio usa cookies propias y de terceros para mejorar la experiencia de usuario y esas cosas.",
+            "allow": "Ok, continua",
+            "deny": "Nada de cookies",
+            "link": "Saber más"
+          },
+          "onStatusChange": function(status, chosenBefore) {
+            if (status == 'allow') {
+              runGA();
+            }
+          },
+          "onInitialise" : function(status) {
+            if (status == 'allow') {
+              runGA();
+            }
+          }
+        })
+      });
+    </script>
+
 </head>
