--- a/themes/sergiocarracedo/layout/page.ejs
+++ b/themes/sergiocarracedo/layout/page.ejs
@@ -1,7 +1,7 @@
 <div id="single" class="page">
     <%- partial("_partial/post/header")%>
     <div class="section">
-        <div class="article">
+        <div class="article container-fluid-1200">
             <div class="main">
                 <div class="content">
                     <%- page.content %>
