--- a/themes/sergiocarracedo/source/css/_posts.scss
+++ b/themes/sergiocarracedo/source/css/_posts.scss
@@ -104,22 +104,31 @@
       margin: 0 0 15px 15px;
     }
 
+    .width-50,
     .right-50,
     .left-50 {
       width: 50%;
     }
 
+    .width-40,
     .right-40,
     .left-40 {
       width: 40%;
     }
 
+    .width-33,
     .right-33,
     .left-33 {
       width: 33%;
     }
 
+
+    .width-50,
     .right-50,
+    .width-40,
+    .right-40,
+    .left-40,
+    .width-33,
     .right-33,
     .left-33,
     .left-50 {
