--- a/themes/sergiocarracedo/layout/_partial/scripts.ejs
+++ b/themes/sergiocarracedo/layout/_partial/scripts.ejs
@@ -1,1 +1,7 @@
+<script src="https://cdn.bootcss.com/photoswipe/4.1.3/photoswipe.min.js"></script>
+<script src="https://cdn.bootcss.com/photoswipe/4.1.3/photoswipe-ui-default.min.js"></script>
+
 <%- js(['js/jquery.min.js', 'js/sergiocarracedo.js'])%>
+
+<link href="https://cdn.bootcss.com/photoswipe/4.1.3/photoswipe.min.css" rel="stylesheet">
+<link href="https://cdn.bootcss.com/photoswipe/4.1.3/default-skin/default-skin.min.css" rel="stylesheet">
