--- a/themes/sergiocarracedo/source/css/_posts.scss
+++ b/themes/sergiocarracedo/source/css/_posts.scss
@@ -77,11 +77,29 @@
 
     a {
       display: inline-block;
-      color: $flat-color;
       font-weight: bold;
       text-decoration: none;
       position: relative;
-      @include underline-effect($flat-color);
+      color: $flat-color;
+      @include a-inverse($flat-color, darken($secondary-color, 20%));
+    }
+
+    h1 {
+      margin-top: 50px;
+      margin-bottom: 30px;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+
+    h2 {
+      margin-top: 50px;
+      margin-bottom: 25px;
+
+      &:first-child {
+        margin-top: 0;
+      }
     }
 
     h3 {
@@ -139,6 +157,15 @@
       }
     }
 
+    .center {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+
+    .clearfix {
+      clear:both;
+    }
 
     .video-container {
       margin-bottom: 20px;
