--- a/themes/sergiocarracedo/source/css/_variables.scss
+++ b/themes/sergiocarracedo/source/css/_variables.scss
@@ -1,10 +1,14 @@
 $primary-color: #004262;
 $secondary-color: #b2d676;
 $flat-color: #295F65; //#5B8A6D
-$gray: #333;
+$gray: #222;
 
 $primary-font: 'Merriweather', serif;
 $secondary-font: 'Press Start 2P', cursive;
 
 $white: #fff;
 $black: #000;
+
+$light-grey: #aaa;
+$link-color: lighten($flat-color, 30%);
+$link-hover-color: darken($secondary-color, 10%);
