--- a/themes/sergiocarracedo/layout/_partial/post/footer.ejs
+++ b/themes/sergiocarracedo/layout/_partial/post/footer.ejs
@@ -11,7 +11,7 @@
     <div class="grid-row">
       <div class="col-xs-12">
         <h3>Programador y desarrollador de aplicaciones web, <a
-                  href="https://www.drupal.org/u/sergiocarracedo">#drupal</a> es mi guia. Amante de la #f1, de las buenas conversaciones y de los pequeños detalles.</h3>
+                  href="https://www.drupal.org/u/sergiocarracedo">#drupal</a> es mi guía. Amante de la #f1, de las buenas conversaciones y de los pequeños detalles.</h3>
       </div>
     </div>
   </div>
