--- a/themes/sergiocarracedo/source/css/_highlight.scss
+++ b/themes/sergiocarracedo/source/css/_highlight.scss
@@ -96,6 +96,6 @@ pre .javascript .function {
   color: #c678dd;
 }
 
-.highlight {
-  .gutter { display: none; }
-}
+//.highlight {
+//  .gutter { display: none; }
+//}
