--- a/themes/sergiocarracedo/layout/_partial/post/article.ejs
+++ b/themes/sergiocarracedo/layout/_partial/post/article.ejs
@@ -43,6 +43,9 @@
   </div>
 </div>
 
+<div class="post-comments container-fluid-1200">
+    <div id="disqus_thread">Para mostrar los comentarios es necesario la aceptación del uso de cookies</div>
+</div>
 
 
 <%- partial("_partial/photoswipe")%>
