--- a/themes/sergiocarracedo/layout/_partial/post/article.ejs
+++ b/themes/sergiocarracedo/layout/_partial/post/article.ejs
@@ -5,7 +5,7 @@
         <%- page.title %>
       </h1>
       <div class="stuff">
-        <span><%- page.date.locale("es").format("DD MMMM YYYY") %></span>
+        <span><%- page.date.locale("en").format("MMMM DD, YYYY") %></span>
       </div>
 
       <% if (page.cover) { %>
@@ -54,7 +54,7 @@
 </div>
 
 <div class="post-comments container-fluid-1200">
-    <div id="disqus_thread">Para mostrar los comentarios es necesario la aceptación del uso de cookies</div>
+    <div id="disqus_thread">To show the comments is mandatory accept cookie policy.</div>
 </div>
 
 
