--- a/themes/sergiocarracedo/layout/_partial/post/footer.ejs
+++ b/themes/sergiocarracedo/layout/_partial/post/footer.ejs
@@ -10,8 +10,7 @@
   <div class="claim container-fluid-1440">
     <div class="grid-row">
       <div class="col-xs-12">
-        <h3>Programador y desarrollador de aplicaciones web, <a
-                  href="https://www.drupal.org/u/sergiocarracedo">#drupal</a> es mi guía. Amante de la #f1, de las buenas conversaciones y de los pequeños detalles.</h3>
+        <h3>Front-end and back-end developer.<br />#formula1, good conversations and small details lover.</h3>
       </div>
     </div>
   </div>
@@ -20,7 +19,7 @@
     <div class="grid-row">
       <div class="col-xs-12">
         <a href="/" class="back">
-          Inicio
+          Home
         </a>
       </div>
     </div>
