--- a/themes/sergiocarracedo/layout/_partial/post/item.ejs
+++ b/themes/sergiocarracedo/layout/_partial/post/item.ejs
@@ -4,7 +4,7 @@
 
     <div class="titles">
       <h6>
-        <%- post.date.locale("es").format("DD MMMM YYYY") %>
+        <%- post.date.locale("en").format("MMMM DD, YYYY") %>
       </h6>
       <h3>
         <%- post.title %>
