--- a/themes/sergiocarracedo/layout/_partial/post/header.ejs
+++ b/themes/sergiocarracedo/layout/_partial/post/header.ejs
@@ -10,7 +10,7 @@
           </h4>
         </a>
       </div>
-      <div class="hidden-xs col-sm-6">
+      <div class="hidden-xs hidden-lxs col-sm-6">
         <h3 class="subtitle"><%- page.title %></h3>
       </div>
     </div>
