Add Dealing with infinite pagination post

--- a/themes/sergiocarracedo/source/css/_content.scss
+++ b/themes/sergiocarracedo/source/css/_content.scss
@@ -4,6 +4,9 @@
   line-height: 1.4em;
   color: $white;
 
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1.2em;
+  }
   h1 {
     font-size: 39px
   }
