--- a/themes/sergiocarracedo/layout/_partial/social.ejs
+++ b/themes/sergiocarracedo/layout/_partial/social.ejs
@@ -1,7 +1,11 @@
 <div class="social">
-  <a href="mailto:info@sergiocarracedo.es" class="social-link" title="info@sergiocarracedo.es">
+  <a href="http://www.linkedin.com/in/sergiocarracedo" class="social-link" target="_blank">
+    <i class="fab fa-linkedin"></i>
+  </a>
+  <a href="mailto:hi+blog@sergiocarracedo.es" class="social-link" title="hi+blog@sergiocarracedo.es">
     <i class="fas fa-envelope"></i>
   </a>
+
   <a href="https://github.com/sergiocarracedo" class="social-link" target="_blank">
     <i class="fab fa-github"></i>
   </a>
@@ -9,9 +13,7 @@
     <i class="fab fa-drupal"></i>
   </a>
 
-  <a href="http://www.linkedin.com/in/sergiocarracedo" class="social-link" target="_blank">
-    <i class="fab fa-linkedin"></i>
-  </a>
+
   <a href="https://www.twitter.com/sergiocarracedo" class="social-link" target="_blank">
     <i class="fab fa-twitter"></i>
   </a>
