--- a/themes/sergiocarracedo/layouts/partials/head.html
+++ b/themes/sergiocarracedo/layouts/partials/head.html
@@ -2,7 +2,7 @@
   {{ $title := print .Site.Title " | " .Title }}
   <meta charset="UTF-8"/>
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"/>
-  <meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  <meta content="width=device-width, minimum-scale=1.0" name="viewport">
   <title>{{ $title }}</title>
 
   <meta content="yes" name="apple-mobile-web-app-capable"/>
