--- a/themes/sergiocarracedo/layouts/partials/script.html
+++ b/themes/sergiocarracedo/layouts/partials/script.html
@@ -2,6 +2,8 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133459072-1"></script>
 <script>
 function runGA () {
+  window.dataLayer = window.dataLayer || []
+
   function gtag () {dataLayer.push(arguments)}
 
   gtag('js', new Date())
