--- a/themes/sergiocarracedo/layouts/partials/home/hero.html
+++ b/themes/sergiocarracedo/layouts/partials/home/hero.html
@@ -1,4 +1,5 @@
 <section class="home-hero">
+  {{ partial "theme-switch.html" }}
   <div class="wrapper-1200">
     <header class="home-hero__header">
       {{ partial "me.html"}}
