--- a/themes/sergiocarracedo/assets/scss/layout/_footer.scss
+++ b/themes/sergiocarracedo/assets/scss/layout/_footer.scss
@@ -38,14 +38,24 @@
     &__titles {
       h1 {
         font-size: 40px;
+
+        @media screen and (max-width: 500px) {
+          font-size: 30px;
+        }
       }
 
       h2 {
         font-size: 20px;
+        @media screen and (max-width: 500px) {
+          font-size: 16px;
+        }
       }
 
       h3 {
         font-size: 16px;
+        @media screen and (max-width: 500px) {
+          font-size: 14px;
+        }
       }
     }
   }
