--- a/themes/sergiocarracedo/layouts/partials/opengraph.html
+++ b/themes/sergiocarracedo/layouts/partials/opengraph.html
@@ -39,3 +39,5 @@
 
 {{- /* Facebook Page Admin ID for Domain Insights */}}
 {{- with .Site.Social.facebook_admin }}<meta property="fb:admins" content="{{ . }}" />{{ end }}
+
+<meta name="twitter:card" content="summary_large_image"></meta>
