--- a/themes/sergiocarracedo/layouts/partials/post-teaser.html
+++ b/themes/sergiocarracedo/layouts/partials/post-teaser.html
@@ -4,7 +4,7 @@
       {{ $image := .Resources.GetMatch .Params.cover }}
       {{ if $image }}
         <a class="post__link" href="{{ .RelPermalink }}">
-          {{ $image := $image.Fill "500x250"}}
+          {{ $image := $image.Fill "500x250 Center"}}
           {{ with $image }}
               <img src="{{ .RelPermalink}}" width="{{ .Width }}" height="{{ .Height }}" alt="{{ .Title }}"/>
           {{ end }}
