--- a/themes/sergiocarracedo/layouts/partials/opengraph.html
+++ b/themes/sergiocarracedo/layouts/partials/opengraph.html
@@ -44,3 +44,4 @@
 {{- /* Facebook Page Admin ID for Domain Insights */}}
 {{- with .Site.Social.facebook_admin }}<meta property="fb:admins" content="{{ . }}" />{{ end }}
 
+<meta name="twitter:card" content="summary_large_image"></meta>
