--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -188,19 +188,39 @@
   table {
     margin: 15px 0;
     border-collapse: collapse;
-    display: table;
-    width: 100%;
+    min-width: 100%;
     table-layout: fixed;
     word-wrap: break-word;
 
+    max-width: 100%;
+    overflow-x: auto;
+    display: block;
+
+
     tr {
-      border-top: 1px solid #ccc;
-      background-color: #fff;
     }
 
+    th, strong  {
+      color: var(--primary-color);
+      font-weight: bold;
+      text-align: left;
+
+    }
     th, td {
-      border: 1px solid #ddd;
-      padding: 6px 13px;
+      border-bottom: 1px solid var(--text-color);
+      padding: 10px 13px;
+    }
+    td {
+      background-color: lighten($flat-color, 32%);
+      [data-theme=dark] & {
+        background-color: darken($flat-color, 42%);
+      }
+    }
+
+    tr:last-child {
+      td {
+        border-bottom: none
+      }
     }
   }
 
