--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -20,6 +20,10 @@
 
   }
 
+
+  img {
+    margin: auto;
+  }
   h1, h2, h3, h4, h5, h6 {
     font-family: $impact-font;
   }
@@ -85,6 +89,7 @@
     background: transparent;
     padding: 0;
     overflow: visible;
+    margin-top: -1.6rem;
 
     table {
       margin: 0;
