fix: header title overflow

--- a/themes/sergiocarracedo/layouts/partials/header.html
+++ b/themes/sergiocarracedo/layouts/partials/header.html
@@ -18,7 +18,7 @@
   </h2>
 
   <div class="web-header__page-title">
-    {{ .Title }}
+    <span>{{ .Title }}</span>
   </div>
 
   {{ partial "theme-switch.html" }}
