--- a/themes/sergiocarracedo/assets/scss/layout/_header.scss
+++ b/themes/sergiocarracedo/assets/scss/layout/_header.scss
@@ -76,11 +76,22 @@
     color: $white;
     align-items: center;
     padding-right: 200px;
+    padding-left: 30px;
 
     justify-content: center;
     opacity: 0;
     transition: all .2s ease-in-out;
     display: none;
+    overflow: hidden;
+
+    span {
+      display: block;
+      overflow: hidden;
+      padding: 4px 0;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      max-width: 100%;
+    }
 
     @media screen and (min-width: 768px) {
       display: flex;
@@ -91,7 +102,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    flex: 1;
   }
 
 
