post improvement and cover

--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -27,6 +27,11 @@
     font-family: $impact-font;
   }
 
+
+  h1 {
+    text-decoration: underline 0.1em var(--secondary-color);
+  }
+
   $sizes: (
           h1: 1.95em,
           h2: 1.6em,
