chore: change tag to GA4

--- a/themes/sergiocarracedo/layouts/partials/script.html
+++ b/themes/sergiocarracedo/layouts/partials/script.html
@@ -1,5 +1,5 @@
 {{ if $.Site.Params.GA }}
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133459072-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ $.Site.Params.GA }}"></script>
 <script>
 function runGA () {
   window.dataLayer = window.dataLayer || []
