feat: search feature

--- a/themes/sergiocarracedo/assets/scss/pages/section-list/_list.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/section-list/_list.scss
@@ -3,6 +3,10 @@
 
   &__header {
     margin: 0 0 60px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
   }
 
   &__title {
