--- a/themes/sergiocarracedo/layouts/partials/me.html
+++ b/themes/sergiocarracedo/layouts/partials/me.html
@@ -10,7 +10,7 @@
       Senior Fullstack developer.
     </h2>
     <h3>
-      Formula 1, cats, good conversations and small details lover.
+      Always learning, cats, good conversations and small details lover.
     </h3>
   </div>
 </div>
