--- a/themes/sergiocarracedo/layouts/search/list.html
+++ b/themes/sergiocarracedo/layouts/search/list.html
@@ -4,6 +4,8 @@
     <h1 class="section__title page-title" id="search-title">
       {{ .Title }}
     </h1>
+
+    {{ partial "search-form.html" . }}
   </header>
 
   {{ if .Content }}
