--- a/themes/sergiocarracedo/assets/scss/pages/home/_posts.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/home/_posts.scss
@@ -20,6 +20,13 @@
     }
   }
 
+  &__header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
   &__all {
     text-align: center;
 
