--- a/themes/sergiocarracedo/assets/scss/layout/_header.scss
+++ b/themes/sergiocarracedo/assets/scss/layout/_header.scss
@@ -1,12 +1,16 @@
 .web-header {
   background: url(/i/header_bg.png);
   background-size: cover;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+
   padding: 10px 20px;
   z-index: 2;
+
+  @media screen  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
 
   .avatar {
     border-radius: 99px;
