--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -28,8 +28,14 @@
   }
 
 
-  h1 {
+  h1, h2 {
     text-decoration: underline 0.1em var(--secondary-color);
+  }
+  h2 {
+    color: var(--primary-color);
+  }
+  h3 {
+    color: var(--primary-color);
   }
 
   $sizes: (
